prd_package/objects/CTI_Route_Area__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STN__c</fullName>
        <label>STN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CTI Route Area (Mapping Station - STN)</label>
</CustomObject>